tests/cases/errors/string_concat_integral_mode_unsupported/main.sv
module Top;
  bit [15:0] joined;

  initial begin
    joined = {8'hAB, 8'hCD};
  end
endmodule
